crates/uitest/fixtures/mir_check/move_conflict_borrow.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/move_conflict_borrow.fe
---
error[8-0000]: type mismatch
  ┌─ move_conflict_borrow.fe:6:5
  │
6 │     value.value
  │     ^^^^^^^^^^^ expected `()`, but `u256` is given
